# rastertools

./: .coverage  .gitignore  .readthedocs.yaml  .~lock.pb_vsimem.odt#  AUTHORS.rst  CHANGELOG.rst  Dockerfile  METADATA  README.rst  RECORD  commentaires_rastertools.odt  env_test.yml  env_update.yml  environment.yml  issue_code_quality.odt  mail_olivier.odt  pb_vsimem.odt  setup.cfg  setup.py  top_level.txt  tox.ini  zonalstats_tries.odt
.github/workflows/: cd.yml  ci.yml
docs/: cli.rst  conda.yml  conf.py  index.rst  install.rst  private_api.rst  rasterproduct.rst  usage.rst
docs/_templates/: custom_module_template.rst
docs/api/: eolab.rastertools.Filtering.adaptive_gaussian.rst  eolab.rastertools.Filtering.local_mean.rst  eolab.rastertools.Filtering.outputdir.rst  eolab.rastertools.Filtering.pad_mode.rst  eolab.rastertools.Filtering.postprocess_files.rst  eolab.rastertools.Filtering.process_file.rst  eolab.rastertools.Filtering.vrt_dir.rst  eolab.rastertools.Filtering.window_size.rst  eolab.rastertools.Filtering.with_windows.rst  eolab.rastertools.Hillshade.elevation.rst  eolab.rastertools.Hillshade.keep_vrt.rst  eolab.rastertools.Hillshade.postprocess_files.rst  eolab.rastertools.Hillshade.process_file.rst  eolab.rastertools.Hillshade.process_files.rst  eolab.rastertools.Hillshade.radius.rst  eolab.rastertools.Hillshade.resolution.rst  eolab.rastertools.Hillshade.rst  eolab.rastertools.Hillshade.vrt_dir.rst  eolab.rastertools.Hillshade.window_size.rst  eolab.rastertools.Hillshade.with_output.rst  eolab.rastertools.Hillshade.with_vrt_stored.rst  eolab.rastertools.Hillshade.with_windows.rst  eolab.rastertools.Radioindice.__init__.rst  eolab.rastertools.Radioindice.bi.rst  eolab.rastertools.Radioindice.bi2.rst  eolab.rastertools.Radioindice.indices.rst  eolab.rastertools.Radioindice.ipvi.rst  eolab.rastertools.Radioindice.keep_vrt.rst  eolab.rastertools.Radioindice.merge.rst  eolab.rastertools.Radioindice.ndbi.rst  eolab.rastertools.Radioindice.ndti.rst  eolab.rastertools.Radioindice.ndwi2.rst  eolab.rastertools.Radioindice.pad_mode.rst  eolab.rastertools.Radioindice.postprocess_files.rst  eolab.rastertools.Radioindice.process_file.rst  eolab.rastertools.Radioindice.process_files.rst  eolab.rastertools.Radioindice.rvi.rst  eolab.rastertools.Radioindice.tsavi.rst  eolab.rastertools.Radioindice.with_roi.rst  eolab.rastertools.Radioindice.with_vrt_stored.rst  (+155 more)
docs/cli/: filtering.rst  hillshade.rst  radioindice.rst  speed.rst  svf.rst  tiling.rst  timeseries.rst  zonalstats.rst
src/rastertools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: .coverage  cmptools.py  conftest.py  test_algo.py  test_radioindice.py  test_rasterproc.py  test_rasterproduct.py  test_rastertools.py  test_rastertype.py  test_speed.py  test_stats.py  test_tiling.py  test_utils.py  test_vector.py  test_zonalstats.py  utils4test.py
tests/tests_data/: COMMUNE_32001.dbf  COMMUNE_32001.shp  COMMUNE_59xxx.geojson  DSM_PHR_Dunkerque.tif  OSO_2017_classification_dep59.shx  OSO_nomenclature_2017.json  OSO_nomenclature_2017_wrong.json  RGB_TIF_20170105_013442_test.tif.aux.xml  S2A_MSIL2A_20190116T105401_N0211_R051_T30TYP_20190116T120806.vrt  SENTINEL2A_20180928-105515-685_L2A_T30TYP_D-ndwi.tif.aux.xml  SENTINEL2B_20181023-105107-455_L2A_T30TYP_D_targz.TAR.GZ.properties  SPOT6_2018_France-Ortho_NC_DRS-MS_SPOT6_2018_FRANCE_ORTHO_NC_GEOSUD_MS_82.tar.gz.properties  additional_rastertypes.json  grid.geojson  listing.lst  (+5 more)
tuto/: Rastertools_Tutorial.ipynb
tutorial/: Rastertools_Tutorial.ipynb
(+1214 files in other folders)
